добавляє базові файли дз7

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,32 +19,34 @@
     <!--Шапка сайта-->
     <header class="header">
       <div class="container">
-        <a class="logo" href="./index.html"><span class="accent">Web</span>Studio</a>
+        <a class="logo" href="./index.html"><span class="logo__accent">Web</span>Studio</a>
         <nav class="nav">
           <ul class="site-nav">
-            <li class="nav-item"><a class="nav-link" href="./index.html">Студия</a></li>
-            <li class="nav-item">
-              <a class="nav-link current" href="./portfolio.html">Портфолио</a>
+            <li class="site-nav__item">
+              <a class="site-nav__link" href="./index.html">Студия</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="">Контакты</a></li>
+            <li class="site-nav__item">
+              <a class="site-nav__link site-nav__current" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="site-nav__item"><a class="site-nav__link" href="">Контакты</a></li>
           </ul>
         </nav>
         <ul class="contacts">
           <li class="contacts-item">
-            <a class="contacts-link" href="mailto:info@devstudio.com">
-              <svg class="contacts-icon" width="16" height="12">
+            <a class="contacts-item__link" href="mailto:info@devstudio.com">
+              <svg class="contacts-item__icon" width="16" height="12">
                 <use href="./images/symbol-defs.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
           <li class="contacts-item">
-            <a class="contacts-link" href="tel:+380961111111">
-              <svg class="contacts-icon" width="10" height="16">
+            <a class="contacts-item__link" href="tel:+380961111111">
+              <svg class="contacts-item__icon" width="10" height="16">
                 <use href="./images/symbol-defs.svg#icon-smartphone"></use>
               </svg>
-              +380961111111</a
-            >
+              +380961111111
+            </a>
           </li>
         </ul>
       </div>
