--- a/index.html
+++ b/index.html
@@ -13,32 +13,36 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/main.min.css.scss" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <!--Шапка сайта-->
     <header class="header">
       <div class="container">
-        <a class="logo" href="./index.html"><span class="accent">Web</span>Studio</a>
+        <a class="logo" href="./index.html"><span class="logo__accent">Web</span>Studio</a>
         <nav class="nav">
           <ul class="site-nav">
-            <li class="nav-item"><a class="nav-link current" href="./index.html">Студия</a></li>
-            <li class="nav-item"><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
-            <li class="nav-item"><a class="nav-link" href="">Контакты</a></li>
+            <li class="site-nav__item">
+              <a class="site-nav__link site-nav__current" href="./index.html">Студия</a>
+            </li>
+            <li class="site-nav__item">
+              <a class="site-nav__link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="site-nav__item"><a class="site-nav__link" href="">Контакты</a></li>
           </ul>
         </nav>
         <ul class="contacts">
           <li class="contacts-item">
-            <a class="contacts-link" href="mailto:info@devstudio.com">
-              <svg class="contacts-icon" width="16" height="12">
+            <a class="contacts-item__link" href="mailto:info@devstudio.com">
+              <svg class="contacts-item__icon" width="16" height="12">
                 <use href="./images/symbol-defs.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
           <li class="contacts-item">
-            <a class="contacts-link" href="tel:+380961111111">
-              <svg class="contacts-icon" width="10" height="16">
+            <a class="contacts-item__link" href="tel:+380961111111">
+              <svg class="contacts-item__icon" width="10" height="16">
                 <use href="./images/symbol-defs.svg#icon-smartphone"></use>
               </svg>
               +380961111111
